--- a/Content/mainstyle.css
+++ b/Content/mainstyle.css
@@ -1,22 +1,113 @@
-﻿@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;800&display=swap");
+﻿@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;900&family=Libre+Baskerville&display=swap");
 li:hover {
   color: black;
 }
 
+.home_main {
+  position: relative;
+  background-blend-mode: darken;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  top: -100px;
+  background-image: url("../wwwroot/svgss/anasayfa.webp");
+}
+.home_main div {
+  text-align: left;
+  position: relative;
+  left: 15%;
+  top: 25%;
+  width: 45%;
+}
+.home_main div h1 {
+  color: #B61E03;
+  margin-bottom: -1rem;
+}
+.home_main div h3 {
+  margin-bottom: 10rem;
+  color: #B61E03;
+  left: 15%;
+}
+.home_main div p {
+  color: black;
+  margin-bottom: 5rem;
+}
+.home_main div button {
+  background-color: grey;
+  color: black;
+  padding: 15px 50px;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 900;
+  border: none;
+  transition: ease-in-out 0.5s;
+}
+.home_main div button:hover {
+  color: white;
+}
+
+#home_main2 {
+  position: relative;
+  background-blend-mode: darken;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  top: -100px;
+  border-radius: 15px;
+  background-image: url("../wwwroot/svgss/hakkımızda.webp");
+}
+#home_main2 div {
+  text-align: center;
+  position: relative;
+  left: 25%;
+  top: 25%;
+  width: 45%;
+}
+#home_main2 div h1 {
+  color: #B61E03;
+  margin-bottom: 10rem;
+}
+#home_main2 div p {
+  color: black;
+  margin-bottom: 5rem;
+}
+#home_main2 div button {
+  background-color: grey;
+  color: black;
+  padding: 15px 50px;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 900;
+  border: none;
+  transition: ease-in-out 0.5s;
+}
+#home_main2 div button:hover {
+  color: white;
+}
+
 .navbar_main {
   top: 0;
-  opacity: 0.7;
+  opacity: 1;
   position: sticky;
   z-index: 999;
   width: 80%;
   margin: 0 auto;
-  background-color: white;
+  border-radius: 10px;
+  background-color: rgba(250, 250, 250, 0.3);
   color: black;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-around;
   transition: ease-in-out 0.7s;
+}
+.navbar_main .toggle_button {
+  display: none;
 }
 .navbar_main:hover {
   opacity: 1;
@@ -34,6 +125,8 @@ li:hover {
   color: #B61E03;
   position: relative;
   transition: ease-in-out 0.5s;
+  font-size: 1.9rem;
+  font-weight: 800;
 }
 .navbar_main .nav_again .nav-hover a:before {
   transition: ease-in-out 0.5s;
@@ -55,15 +148,25 @@ li:hover {
 }
 
 .cards_container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 50px;
+  display: grid;
+  margin-top: 10rem;
+  color: #B61E03;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 50px;
+  grid-row-gap: 30px;
+  margin-bottom: 20rem;
 }
 .cards_container .cards {
-  background-color: #ddcfcf8c;
-  display: flex;
-  flex-direction: column;
+  text-align: center;
+  border-radius: 10px;
+}
+.cards_container .cards h4 {
+  font-family: "Inter", sans-serif;
+  font-weight: 900;
+}
+.cards_container .cards img {
+  margin-top: 15px;
 }
 
 .slider {
@@ -71,11 +174,11 @@ li:hover {
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
+  margin-top: 10rem;
 }
 .slider .slides {
   position: relative;
-  width: 300%;
-  /* adjust based on the number of slides */
+  width: 200%;
   left: 0;
   transition: left 0.5s ease;
   display: flex;
@@ -84,6 +187,42 @@ li:hover {
 .slider .slides .slide {
   float: left;
   width: 33.3333333333%;
+}
+.slider .slides .slide .card1 {
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: darken;
+  background-image: url("../wwwroot/svgss/havayolu.webp");
+}
+.slider .slides .slide .card2 {
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: darken;
+  background-image: url("../wwwroot/svgss/karayolu.webp");
+}
+.slider .slides .slide .card3 {
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: darken;
+  background-image: url("../wwwroot/svgss/denizyolu.webp");
+}
+.slider .slides .slide .card7 {
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: darken;
+  background-image: url("../wwwroot/svgss/depolama.webp");
+}
+.slider .slides .slide .card8 {
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: darken;
+  background-image: url("../wwwroot/svgss/insurance.webp");
+}
+.slider .slides .slide .card9 {
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: darken;
+  background-image: url("../wwwroot/svgss/danısmanlikk.webp");
 }
 .slider .slides .slide .card {
   border: 1px solid #ccc;
@@ -95,14 +234,15 @@ li:hover {
 }
 .slider .slides .slide .card:hover {
   transform: translateY(-5px);
+  background-color: rgba(0, 0, 0, 0.1);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
 }
 .slider .slides .slide .card .card-body {
   padding: 20px;
   text-align: center;
   font-size: 2rem;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 800;
+  color: white;
+  font-weight: 900;
 }
 
 .prev,
@@ -133,22 +273,210 @@ li:hover {
 }
 
 .havayolu_maindiv {
-  border: 1px solid black;
   display: flex;
   align-items: flex-start;
-  gap: 20px;
+  gap: 50px;
 }
-.havayolu_maindiv div {
+.havayolu_maindiv div:nth-child(1) {
   flex: 50%;
 }
-.havayolu_maindiv div img {
+.havayolu_maindiv div:nth-child(1) img {
+  border-radius: 10px;
   width: 100%;
   height: 100%;
+  transition: ease-in-out 0.5s;
 }
-.havayolu_maindiv div {
+.havayolu_maindiv div:nth-child(1) img:hover {
+  transform: translateY(-5px);
+}
+.havayolu_maindiv div:nth-child(2) {
   flex: 50%;
-}
-.havayolu_maindiv div p {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.havayolu_maindiv div:nth-child(2) ul {
+  list-style: disc;
+}
+
+footer .footer_first_div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+footer .footer_first_div a {
+  color: black;
+  text-decoration: none;
+}
+footer .footer_first_div a:hover {
+  color: #B61E03;
+}
+
+/*KURUMSAL*/
+.kurumsal_main {
+  position: relative;
+  background-image: url("../wwwroot/svgss/kurumsal.webp");
+  background-blend-mode: darken;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 120vh;
+  top: -200px;
+  border-radius: 15px;
+}
+.kurumsal_main div {
+  text-align: center;
+  padding-top: 10rem;
+  position: relative;
+}
+.kurumsal_main div h1:first-child {
+  padding-top: 100px;
+}
+.kurumsal_main div h1 {
+  color: #B61E03;
+  margin-bottom: -2rem;
+}
+
+/*İLETİSİM SAYFASI*/
+.iletisim_main {
+  position: relative;
+  background-image: url("../wwwroot/svgss/iletisim.webp");
+  background-blend-mode: darken;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 120vh;
+  top: -200px;
+  border-radius: 15px;
+}
+.iletisim_main div {
+  text-align: center;
+  padding-top: 10rem;
+  position: relative;
+}
+.iletisim_main div h1:first-child {
+  padding-top: 100px;
+}
+.iletisim_main div h1 {
+  color: #B61E03;
+  margin-bottom: -2rem;
+}
+
+/* MEDIA QUERIES*/
+@media (max-width: 480px) and (min-width: 320px) {
+  .navbar_main {
+    top: 0;
+    opacity: 0.7;
+    position: sticky;
+    z-index: 999;
+    width: 80%;
+    margin: 0 auto;
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
+    transition: ease-in-out 0.7s;
+  }
+
+  .toggle_button {
+    display: block !important;
+  }
+
+  .nav_again {
+    display: none !important;
+  }
+
+  .hidden-visible {
+    display: block !important;
+  }
+
+  .home_main {
+    height: 100vh;
+    width: 110vw;
+  }
+  .home_main div h1 {
+    font-size: 4rem;
+  }
+  .home_main div p {
+    font-size: 2rem;
+  }
+  .home_main div button {
+    font-size: 1.5rem;
+  }
+
+  #home_main2 {
+    height: 100vh;
+    width: 110vw;
+  }
+  #home_main2 div {
+    text-align: center;
+  }
+  #home_main2 div h1 {
+    font-size: 3rem;
+  }
+  #home_main2 div p {
+    font-size: 2rem;
+    color: black;
+  }
+  #home_main2 div button {
+    font-size: 1.5rem;
+  }
+
+  .layout_title {
+    font-size: 50px;
+  }
+
+  .slider .slides {
+    flex-direction: column;
+    padding-left: 50px;
+  }
+  .slider .slides .slide .card {
+    width: 110%;
+  }
+  .slider .slides .slide .card .card-body {
+    font-size: 12px;
+  }
+  .slider .prev, .slider .next {
+    display: none;
+  }
+
+  .kurumsal_main div h1 {
+    font-size: 5rem;
+  }
+
+  .cards_container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 30px;
+  }
+
+  .hizmetler_h1 {
+    font-size: 5rem;
+  }
+
+  .havayolu_maindiv {
+    flex-direction: column;
+  }
+
+  .iletisim_main div h1 {
+    font-size: 5rem;
+  }
+
+  .container .iletisim_container {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .container .iletisim_container .iletisim_container2 {
+    margin-top: 5rem !important;
+  }
+  footer {
+    flex-direction: column;
+  }
 }
