--- a/Views/Hizmetlerimiz/Danismanlik.cshtml
+++ b/Views/Hizmetlerimiz/Danismanlik.cshtml
@@ -1,8 +1,29 @@
 ﻿
 @{
-    ViewBag.Title = "Danismanlik";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+</head>
+<div class="container body-content">
 
-<h2>Danismanlik</h2>
 
+    <h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Danışmanlık Hizmetleri</h1>
+    <div class="havayolu_maindiv">
+        <div>
+            <img src="~/wwwroot/svgss/danısmanlikk.webp" />
+        </div>
+        <div>
+
+            <p>
+                Lojistik alanındaki yenilikleri ve gelişmeleri takip ederek müşterilerime özel çözümler sunmaktayız.
+
+            </p>
+            <ul style="font-size:1.5rem;">
+            </ul>
+        </div>
+    </div>
+
+
+</div>
