--- a/Views/Hizmetlerimiz/DenizYoluTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/DenizYoluTasimaciligi.cshtml
@@ -1,8 +1,36 @@
 ﻿
 @{
-    ViewBag.Title = "DenizYoluTasimaciligi";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+</head>
+<div class="container body-content">
 
-<h2>DenizYoluTasimaciligi</h2>
+<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Denizyolu Taşımacılığı</h1>
+<div class="havayolu_maindiv">
+    <div>
 
+        <img src="~/wwwroot/svgss/denizyolu.webp" />
+    </div>
+    <div>
+
+        <p>
+            Global alandaki çözüm ortaklarımız ile denizyolu taşımacılığında, tüm dünya limanlarına hizmet sağlamaktayız.<br /><br /> Alanında deneyimli kadromuz ile zamanında ve etkin lojistik çözümler sunmaktayız.
+        </p>
+        <ul style="font-size:1.5rem;">
+            <li> LCL / Parsiyel Konteyner</li>
+            <li>FCL / Full Konteyner</li>
+            <li>Transit Taşımacılık</li>
+            <li>Intermodal Taşımacılık</li>
+            <li>Tehlikeli Madde Taşımacılığı</li>
+           
+
+        </ul>
+    </div>
+</div>
+
+
+
+</div>
