--- a/Views/Hizmetlerimiz/KarayoluTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/KarayoluTasimaciligi.cshtml
@@ -1,8 +1,35 @@
 ﻿
 @{
-    ViewBag.Title = "KarayoluTasimaciligi";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+</head>
+<div class="container body-content">
 
-<h2>KarayoluTasimaciligi</h2>
+<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Karayolu Taşımacılığı</h1>
+<div class="havayolu_maindiv">
+    <div>
 
+        <img src="~/wwwroot/svgss/karayolu.webp" />
+    </div>
+    <div>
+
+        <p>
+            Global alandaki çözüm ortaklarımız ile karayolu taşımacılığında, parsiyel ve komple taşıma hizmeti sağlamaktayız.
+
+        </p>
+        <ul style="font-size:1.5rem;">
+            <li>Komple Tenteli Tır yüklemeleri </li>
+            <li>Parsiyel Tır yüklemeleri</li>
+            <li>Frigorifik Taşımalar</li>
+            <li>Transit Taşımacılık</li>
+            <li> Lowbed Taşımalar</li>
+            <li>Intermodal Taşımacılık</li>
+           
+        </ul>
+    </div>
+</div>
+
+</div>
