--- a/Views/Hizmetlerimiz/SilahveMuhimmatTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/SilahveMuhimmatTasimaciligi.cshtml
@@ -1,8 +1,33 @@
 ﻿
 @{
-    ViewBag.Title = "SilahveMuhimmatTasimaciligi";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+</head>
+<div class="container body-content">
 
-<h2>SilahveMuhimmatTasimaciligi</h2>
+<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Silah ve Mühimmat Taşımacılığı</h1>
+<div class="havayolu_maindiv">
+    <div>
 
+        <img src="~/wwwroot/svgss/silahvemuhimmat.webp" />
+    </div>
+    <div>
+
+        <p>
+            Silah ve mühimmat taşımacılığında deneyimli ve güçlü kadromuz ile güvenilir hizmet sunmaktayız.
+        </p>
+        <ul style="font-size:1.5rem;">
+           
+
+
+        </ul>
+    </div>
+</div>
+
+
+
+
+</div>
