--- a/Views/Hizmetlerimiz/ZatiEsyaTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/ZatiEsyaTasimaciligi.cshtml
@@ -1,8 +1,5 @@
 ﻿
 @{
-    ViewBag.Title = "ZatiEsyaTasimaciligi";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>ZatiEsyaTasimaciligi</h2>
-
