--- a/Views/Home/Hizmetlerimiz.cshtml
+++ b/Views/Home/Hizmetlerimiz.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Hizmetlerimiz";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -128,5 +128,4 @@
     </g>
 </svg>
 
-<script src="~/Content/Jscript.js"></script>
 </body>
