--- a/Views/Home/Kurumsal.cshtml
+++ b/Views/Home/Kurumsal.cshtml
@@ -1,79 +1,108 @@
 ﻿
 @{
-    ViewBag.Title = "Kurumsal";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-bQLm8mXyAaY+nDg+ySkdBLvL8tZs/LeVFKvxzzn1q3v1lffyQfiYcYnJgyAZtZzv8nmRw/xlh+aOgD0UD3X1yw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
 
-<h2>Kurumsal</h2>
-
-<h1 class="layout_title" style="text-align:left;">About us</h1>
-<p>
-    As ISM logistics, we were established in Istanbul, which takes the pulse of the industry, with an innovative perspective.<br /><br />
-
-    With our strong connections around the world, we offer a logistics service that you have not experienced before.<br /><br />
-
-    In addition to our young and dynamic team, we aim to provide specific and solution-oriented services with our experienced staff of more than 10 years in the industry.
-</p>
+<div class=kurumsal_main>
+    <div>
+    <h1>ISM LOJİSTİK</h1>
+    <h1>KURUMSAL</h1>
+    </div>
+</div>
 
 
+<div class="container body-content">
 
-<h1 class="layout_title" style="text-align:right;">Değerlerimiz</h1>
 
-<div class="cards_container">
+    <h1 class="layout_title" style="text-align:left;">Hakkımızda</h1>
+    <p>
+        ISM Lojistik olarak, yenilikçi bakış açısıyla sektörün nabzını tutan İstanbul’da kurulduk. Genç ve dinamik ekibimiz yanı sıra sektörde 10 yılı aşkın deneyimli kadromuz ile spesifik ve çözüm odaklı hizmet sunmaktayız. <br /><br />
 
-    <div class="cards">
-        
-        <h4>
-            Customer Focused
-        </h4>
-        <p></p>
+        Dünya çapındaki çözüm ortaklarımız ve önemli tedarikçi bağlantılarımız ile sektörde ilklere imza atmaktayız. <br /><br />
+
+    </p>
+
+    <h1 class="layout_title" style="text-align:right;">Vizyon</h1>
+    <p>
+        Çalışanları, müşterileri ve tedarikçileri ile yenilikçi, çözüm odaklı, başarı ve güvenirlik çatısı altında sorumluluklarının bilincinde, entegre bir lojistik çözüm ortağı olmaktır.
+
+    </p>
+    <h1 class="layout_title" style="text-align:left;">Misyon</h1>
+    <p>
+        Global ağda rekabet eden müşterilerimize, etkin ve zamanında lojistik çözümler ile değer katıyoruz.<br /><br /> Aynı zamanda ekibimizin bilgi ve tecrübelerini sürekli geliştirerek, sektörün yeniliklerinden tedarikçi ve müşterilerimizin faydalanmasını sağlıyoruz. <br /><br /> Şirketimizin çalışma politikası olarak benimsediği değerlerinden ödün vermeyerek hizmet sağlamayı amaçlıyoruz.
+
+    </p>
+
+
+
+    <h1 class="layout_title" style="text-align:right;">Değerlerimiz</h1>
+
+    <div class="cards_container">
+
+        <div class="cards">
+
+            <h4>
+                Etkin ve Çözüm Odaklı Olma
+            </h4>
+            <img src="~/wwwroot/images/thinking.png" />
+            <p></p>
+
+        </div>
+        <div class="cards">
+            <h4>
+                Dürüstlük ve Güven
+            </h4>
+            <img src="~/wwwroot/images/handshake (1).png" />
+            <p></p>
+
+        </div>
+        <div class="cards">
+
+            <h4>
+                Sosyal Sorumluluk
+            </h4>
+            <img src="~/wwwroot/images/social.png" />
+            <p></p>
+
+        </div>
+
+        <div class="cards">
+
+            <h4>
+                Müşteri Odaklı Olma
+            </h4>
+            <img src="~/wwwroot/images/value.png" />
+
+
+        </div>
+
+
+        <div class="cards">
+
+            <h4>
+                Etik Çalışma
+            </h4>
+            <img src="~/wwwroot/images/balance-scale.png" />
+            <p></p>
+
+        </div>
+
+        <div class="cards">
+
+            <h4>
+                Çevreye ve Topluma Saygı
+            </h4>
+            <img src="~/wwwroot/images/save-the-planet (1).png" />
+            <p></p>
+
+        </div>
+
 
     </div>
-    <div class="cards">
-        <h4>
-            Honesty and Trust
-        </h4>
-        <img src="~/wwwroot/images/handshake.svg" />
-        <p></p>
-
-    </div>
-
-    <div class="cards">
-        <i class="fad fa-chart-user"></i>
-        <h4>
-            Work Ethic
-        </h4>
-        <p></p>
-
-    </div>
-    <div class="cards">
-        <i class="fad fa-chart-user"></i>
-        <h4>
-            Social Responsibility
-        </h4>
-        <p></p>
-
-    </div>
-    <div class="cards">
-        <i class="fad fa-chart-user"></i>
-        <h4>
-            Respect for the Environment and Community
-        </h4>
-        <p></p>
-
-    </div>
-    <div class="cards">
-        <i class="fad fa-chart-user"></i>
-        <h4>
-            Solution Oriented
-        </h4>
-        <p></p>
-
-    </div>
-
 
 </div>
