--- a/Content/mainstyle.scss
+++ b/Content/mainstyle.scss
@@ -1,47 +1,153 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;800&display=swap');
+﻿@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;900&family=Libre+Baskerville&display=swap');
 $main_color: #B61E03;
-$font: 'Open Sans', sans-serif;
+
+
 
 
 
 li:hover {
     color: black;
 }
+.home_main {
+    position: relative;
+    background-blend-mode: darken;
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    top: -100px;
+background-image: url('../wwwroot/svgss/anasayfa.webp');
+    
+    
+    div{
+    text-align:left;
+    position:relative;
+    left:15%;
+    top:25%;
+    width:45%;
+    
 
+    h1 {
+        color: $main_color;        
+        margin-bottom:-1rem;
+    }
+
+    h3 {
+        margin-bottom:10rem;
+        color: $main_color;
+        left:15%;
+    }
+    p{
+        color:black;
+        margin-bottom:5rem;
+    }
+
+    button {
+        background-color: grey;
+        color: black;
+        padding: 15px 50px;
+        text-align: center;
+        font-size:2rem;
+        font-weight:900;
+        border:none;
+        transition:ease-in-out .5s;
+       &:hover{
+           color:white;
+       }
+    }
+ }
+}
+#home_main2{
+    position: relative;
+    background-blend-mode: darken;
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    
+    height: 100vh;
+    top: -100px;
+    border-radius:15px;
+background-image: url('../wwwroot/svgss/hakkımızda.webp');
+   
+
+    div {
+        text-align: center;
+        position: relative;
+        left: 25%;
+        top: 25%;
+        width: 45%;
+
+
+        h1 {
+            color: $main_color;
+            margin-bottom: 10rem;
+        }
+     p {
+            color: black;
+            margin-bottom: 5rem;
+        }
+
+        button {
+            background-color: grey;
+            color: black;
+            padding: 15px 50px;
+            text-align: center;
+            font-size: 2rem;
+            font-weight: 900;
+            border: none;
+            transition: ease-in-out .5s;
+
+            &:hover {
+                color: white;
+            }
+        }
+    }
+}
 .navbar_main {
     top: 0;
-    opacity: .7;
+    opacity: 1;
     position: sticky;
     z-index: 999;
     width: 80%;
     margin: 0 auto;
-    background-color: white;
+    border-radius:10px;
+    background-color: rgba(250,250,250,.3);
     color: black;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-around;
     transition: ease-in-out .7s;
 
+
+    .toggle_button{
+        display:none;
+    }
     &:hover {
         opacity: 1;
     }
 
+
     .nav_again {
         display: flex;
         flex-direction: row;
-       
+
+
 
         .nav-hover {
             list-style: none;
             margin-right: 50px;
             font-size: 16px;
-            
+
 
             a {
                 color: $main_color;
                 position: relative;
                 transition: ease-in-out 0.5s;
+                font-size:1.9rem;
+                font-weight:800;
 
                 &:before {
                     transition: ease-in-out 0.5s;
@@ -67,15 +173,30 @@ li:hover {
         }
     }
 }
-.cards_container{
-    display:flex;
-    flex-direction:row;
-    flex-wrap:wrap;
-    gap:50px;
-    .cards{
-        background-color:#ddcfcf8c;
-        display:flex;
-        flex-direction:column;
+
+
+.cards_container {
+    display: grid;
+    margin-top: 10rem;
+    color: $main_color;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 30px;
+    margin-bottom: 20rem;
+
+    .cards {
+        text-align: center;
+        border-radius: 10px;
+
+        h4 {
+            font-family: 'Inter', sans-serif;
+            font-weight: 900;
+        }
+
+        img {
+            margin-top: 15px;
+        }
     }
 }
 .slider {
@@ -83,10 +204,11 @@ li:hover {
     width: 100%;
     margin: 0 auto;
     overflow: hidden;
+    margin-top: 10rem;
 
     .slides {
         position: relative;
-        width: calc(100% * 3); /* adjust based on the number of slides */
+        width: calc(100% * 2); 
         left: 0;
         transition: left 0.5s ease;
         display: flex;
@@ -98,6 +220,59 @@ li:hover {
             width: calc(100% / 3);
 
 
+            .card1 {
+                background-size: cover;
+                background-color: rgba(0, 0, 0, 0.6); 
+                background-blend-mode: darken;
+background-image: url('../wwwroot/svgss/havayolu.webp');
+               
+            }
+
+            .card2 {
+                background-size: cover;
+                background-color: rgba(0, 0, 0, 0.6); 
+                background-blend-mode: darken;
+background-image: url('../wwwroot/svgss/karayolu.webp');
+
+               
+            }
+
+            .card3 {
+                background-size: cover;
+                background-color: rgba(0, 0, 0, 0.6); 
+                background-blend-mode: darken;
+background-image: url('../wwwroot/svgss/denizyolu.webp');
+
+              
+            }
+
+
+            .card7 {
+                background-size: cover;
+                background-color: rgba(0, 0, 0, 0.6); 
+                background-blend-mode: darken;
+background-image: url('../wwwroot/svgss/depolama.webp');
+
+             } 
+
+            .card8 {
+                background-size: cover;
+                background-color: rgba(0, 0, 0, 0.6); 
+                background-blend-mode: darken;
+background-image: url('../wwwroot/svgss/insurance.webp');
+
+              
+            }
+
+            .card9 {
+                background-size: cover;
+                background-color: rgba(0, 0, 0, 0.6); 
+                background-blend-mode: darken;
+background-image: url('../wwwroot/svgss/danısmanlikk.webp');
+
+            
+            }
+
             .card {
                 border: 1px solid #ccc;
                 border-radius: 15px;
@@ -105,19 +280,20 @@ li:hover {
                 margin: 20px;
                 height: 200px;
                 transition: ease-in-out .5s;
-              
 
                 &:hover {
                     transform: translateY(-5px);
+                    background-color:rgba(0,0,0,0.1);
                     box-shadow: 5px 5px 15px rgba(0,0,0,.9);
+                   
                 }
 
                 .card-body {
                     padding: 20px;
                     text-align: center;
                     font-size: 2rem;
-                    font-family: $font;
-                    font-weight: 800;
+                    color: white;
+                    font-weight: 900;
                 }
             }
         }
@@ -150,28 +326,267 @@ li:hover {
 }
 
 .havayolu_maindiv{
-    border:1px solid black;
+   
     display:flex;
     align-items:flex-start;
-    gap:20px;
+    gap:50px;
     
-    div{
+    div:nth-child(1){
         flex:50%;
-        
+   
 
     img{
+        border-radius:10px;
         width:100%;
         height:100%;
+        transition:ease-in-out .5s;
+        &:hover{
+            transform:translateY(-5px);
+         
+        }
     }
     }
 
        
-    div{
+    div:nth-child(2){
         flex:50%;
+        display:flex;
+        flex-direction:column;
+        align-items:flex-start;
+        justify-content:space-between;
     p{ 
 
-        display:flex;
-        flex-direction:column-reverse;
     }
+        ul{
+            list-style:disc;
+      
+        }
+       
+    }
+}
+
+footer {
+    
+    .footer_first_div{
+        display:flex;
+        flex-direction:column;
+        align-items:flex-start;
+        gap:10px;
+        a{
+            color:black;
+            text-decoration:none;
+
+            &:hover{
+                color:$main_color;
+            }
+        }
+    }
+}
+
+/*KURUMSAL*/
+.kurumsal_main {
+    position: relative;
+background-image: url('../wwwroot/svgss/kurumsal.webp');
+
+    background-blend-mode: darken;
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height:120vh;
+    top:-200px;
+    border-radius: 15px;
+
+    div {
+        text-align: center;
+        padding-top:10rem;
+        position: relative;
+        h1:first-child{
+           padding-top:100px;
+        }
+        h1 {
+            color: $main_color;
+            margin-bottom: -2rem;
+        }
+
+    }
+}
+/*İLETİSİM SAYFASI*/
+.iletisim_main {
+    position: relative;
+    background-image: url('../wwwroot/svgss/iletisim.webp');
+   
+    background-blend-mode: darken;
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 120vh;
+    top: -200px;
+    border-radius: 15px;
+
+    div {
+        text-align: center;
+        padding-top: 10rem;
+        position: relative;
+
+        h1:first-child {
+            padding-top: 100px;
+        }
+
+        h1 {
+            color: $main_color;
+            margin-bottom: -2rem;
+        }
+    }
+}
+
+
+
+
+
+/* MEDIA QUERIES*/
+
+@media (max-width: 480px) and (min-width: 320px){
+
+    .navbar_main {
+        top: 0;
+        opacity: .7;
+        position: sticky;
+        z-index: 999;
+        width: 80%;
+        margin: 0 auto;
+        background-color: white;
+        color: black;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-around;
+        transition: ease-in-out .7s;
+}
+
+
+        .toggle_button {
+            display: block !important;
+        }
+
+        .nav_again {
+            display: none !important;
+        }
+
+        .hidden-visible {
+            display: block !important;
+        }
+    .home_main {
+        height: 100vh;
+        width: 110vw;
+
+        div {
+            h1 {
+                font-size: 4rem;
+            }
+
+            p {
+                font-size: 2rem;
+            }
+
+            button {
+                font-size: 1.5rem;
+            }
+        }
+    }
+
+    #home_main2{
+        height:100vh;
+        width:110vw;
+        
+        div{
+                text-align:center;
+        h1{
+            font-size:3rem;
+           
+        }
+        p{
+            font-size:2rem;
+            color:black;
+        }
+        button{
+            font-size:1.5rem;
+        }
+            }
+    }
+    .layout_title{
+        font-size:50px;
+    }
+    .slider {
+      
+        .slides {
+            
+            flex-direction: column;
+            
+            padding-left:50px;
+            
+
+            .slide {
+                
+
+                .card {
+                    width:110%;
+                    .card-body{
+                        font-size:12px;
+                    }
+                    
+                }
+            }
+        }
+        .prev,.next{
+            display:none;
+        }
+    }
+
+    .kurumsal_main{
+        div{
+            h1{
+                font-size:5rem;
+            }
+        }
+    }
+    .cards_container {
+       
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 50px;
+        grid-row-gap: 30px;
+
+    
+    }
+    .hizmetler_h1{
+        font-size:5rem;
+    }
+    .havayolu_maindiv{
+        flex-direction:column;
+    }
+    .iletisim_main{
+        div{
+            h1{
+                font-size:5rem;
+            }
+        }
+    }
+    .container{
+
+    .iletisim_container{
+        display:flex;
+        flex-direction:column !important;
+        .iletisim_container2{
+          margin-top:5rem !important;
+        }
+        iframe{
+           
+        }
+    }
+    }
+    footer {
+        flex-direction: column;
     }
 }
