--- a/Views/Hizmetlerimiz/DepolamaHizmetleri.cshtml
+++ b/Views/Hizmetlerimiz/DepolamaHizmetleri.cshtml
@@ -1,8 +1,31 @@
 ﻿
 @{
-    ViewBag.Title = "DepolamaHizmetleri";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>DepolamaHizmetleri</h2>
+<head>
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+</head>
+<div class="container body-content">
 
+<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Depolama Hizmetleri</h1>
+<div class="havayolu_maindiv">
+    <div>
+        <img src="~/wwwroot/svgss/depolama.webp" />
+     
+
+    </div>
+    <div>
+
+        <p>
+            Depo tedarik ağımız ile kısa veya uzun vadeli depolama hizmeti sunmaktayız.
+        </p>
+        <ul style="font-size:1.5rem;">
+        </ul>
+    </div>
+</div>
+
+
+
+</div>
