--- a/Views/Hizmetlerimiz/HavaYoluTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/HavaYoluTasimaciligi.cshtml
@@ -1,27 +1,27 @@
 ﻿
 @{
-    ViewBag.Title = "HavaYoluTasimaciligi";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
     
 }
 <head>
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+<div class="container body-content">
 
-<h1 style="text-align:right;">Havayolu Taşımacılığı</h1>
+<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Havayolu Taşımacılığı</h1>
 <div class="havayolu_maindiv">
     <div>
 
-    <img style="" src="~/wwwroot/images/hava.png" />
-
+    <img src="~/wwwroot/svgss/havayolu.webp" />
     </div>
     <div>
 
-    <p>
-        Uluslararası havayolu taşımacılığında geniş acente ve havayolu ağımız ile ithalat, ihracat ,transit ve cross
-        yüklemeleriniz için servis sunmaktayız
-    </p>
-        <ol style="font-size:1.5rem;">
+        <p>
+            Global alandaki çözüm ortaklarımız ile havayolu taşımacılığında, dünyanın her noktasına hizmet sağlamaktayız.<br /><br /> Alanında deneyimli kadromuz ve havalimanı 
+            ekibimiz ile zamanında ve etkin lojistik çözümler sunmaktayız.
+        </p>
+        <ul style="font-size:1.5rem;">
         <li>Genel Kargo Taşımaları </li>
         <li>Bozulabilir Kargo Taşımaları</li>
         <li>Charter Taşımaları</li>
@@ -29,6 +29,8 @@
         <li> Tehlikeli Madde Taşımaları</li>
         <li>Transit Taşımalar</li>
         <li>Konsolide/Standard/ Express Servisler</li>
-         </ol>
+         </ul>
     </div>
+</div>
+
 </div>
