--- a/Views/Hizmetlerimiz/Sigorta.cshtml
+++ b/Views/Hizmetlerimiz/Sigorta.cshtml
@@ -1,8 +1,27 @@
 ﻿
 @{
-    ViewBag.Title = "Sigorta";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+</head>
+<div class="container body-content">
 
-<h2>Sigorta</h2>
+<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Sigorta Hizmetleri</h1>
+<div class="havayolu_maindiv">
+    <div>
 
+        <img src="~/wwwroot/svgss/insurance.webp" />
+    </div>
+    <div>
+
+        <p>
+            Anlaşmalı olduğumuz sigorta şirketleri ile lojistik taşımalarında hasar görme riskini teminat altına alarak poliçe servisi sunmaktayız.
+        </p>
+        <ul style="font-size:1.5rem;">
+        </ul>
+    </div>
+</div>
+
+</div>
