--- a/Views/Home/İletişim.cshtml
+++ b/Views/Home/İletişim.cshtml
@@ -1,8 +1,58 @@
 ﻿
 @{
-    ViewBag.Title = "İletişim";
+    ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+</head>
 
-<h2>İletişim</h2>
-<div>broşürdeki gibi footer'a da eklenicek</div>
+<div class=iletisim_main>
+    <div>
+        <h1>ISM LOJİSTİK</h1>
+        <h1>İLETİŞİM</h1>
+    </div>
+</div>
+
+<div class="container body-content">
+    <h2>
+        ISM (International Supply Management) LOGISTICS
+
+    </h2>
+
+
+   <div class="iletisim_container" style="display:flex; flex-direction:row;">
+
+    <address class="iletisim_container2" style="display:flex;flex:50%;flex-direction:column;justify-content:space-around;align-items:flex-start;">
+        <span class="flex_items2">
+            <i class="fi fi-sr-marker"></i>
+            <span>
+                MASLAK MAH. AOS 55. SK. 42 MASLAK<br /> B BLOK NO: 4 İÇ KAPI NO: 542<br /> SARIYER
+                İSTANBUL/TÜRKİYE
+
+            </span>
+        </span>
+
+        <span class="flex_items2"  >
+            <i class="fi fi-sr-phone-call"></i>
+            <span>
+                 (+90) 535 817 53 98
+
+            </span>
+        </span >
+        <span class="flex_items2" >
+            <i class="fi fi-sr-envelope"></i>
+            <span>
+                <a href="mailto:info@ismlogistic.com.tr">info@ismlogistic.com.tr</a><br />
+
+            </span>
+        </span>
+    </address>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3005.913081203791!2d29.021749311178517!3d41.11458931017649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab5be34340059%3A0xb290bf71d730dc2f!2sMaslak%20Mh%2C%20Ahi%20Evran%20Cd.%20No%3A4%20D%3A42%2C%2034398%20Sar%C4%B1yer%2F%C4%B0stanbul!5e0!3m2!1sen!2str!4v1683315514198!5m2!1sen!2str" width="400" height="300" style="border:0; flex:50%; border-radius:15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+</div>
+
+
+
